Simplify cmake anim delete with loop

--- a/doc_modern/examples/CMakeLists.txt
+++ b/doc_modern/examples/CMakeLists.txt
@@ -147,22 +147,11 @@ if (UNIX AND DO_ANIMATIONS)
 	add_custom_target (animation DEPENDS ${_animations})
 
 	# clean target
+	foreach (_num 01 02 03 04 05 06 07)
 	add_custom_target (_anim_clean
 		COMMAND ${CMAKE_COMMAND} -E remove_directory
-		${CMAKE_CURRENT_BINARY_DIR}/anim01
-		COMMAND ${CMAKE_COMMAND} -E remove_directory
-		${CMAKE_CURRENT_BINARY_DIR}/anim02
-		COMMAND ${CMAKE_COMMAND} -E remove_directory
-		${CMAKE_CURRENT_BINARY_DIR}/anim03
-		COMMAND ${CMAKE_COMMAND} -E remove_directory
-		${CMAKE_CURRENT_BINARY_DIR}/anim04
-		COMMAND ${CMAKE_COMMAND} -E remove_directory
-		${CMAKE_CURRENT_BINARY_DIR}/anim05
-		COMMAND ${CMAKE_COMMAND} -E remove_directory
-		${CMAKE_CURRENT_BINARY_DIR}/anim06
-		COMMAND ${CMAKE_COMMAND} -E remove_directory
-		${CMAKE_CURRENT_BINARY_DIR}/anim07
-		COMMENT "Removing animations")
+		${CMAKE_CURRENT_BINARY_DIR}/anim${_num}
+	endforeach ()
 	# register with spotless target
 	add_depend_to_target (spotless _anim_clean)
 endif (UNIX AND DO_ANIMATIONS)
