Unique clean targets per animation

--- a/doc_modern/examples/CMakeLists.txt
+++ b/doc_modern/examples/CMakeLists.txt
@@ -148,13 +148,13 @@ if (UNIX AND DO_ANIMATIONS)
 
 	# clean target
 	foreach (_num 01 02 03 04 05 06 07)
-		add_custom_target (_anim_clean
+		add_custom_target (_anim_clean${_num}
 			COMMAND ${CMAKE_COMMAND} -E remove_directory
 			${CMAKE_CURRENT_BINARY_DIR}/anim${_num}
-			COMMENT "Removing animations")
+			COMMENT "Removing animation ${_num}")
+		add_depend_to_target (spotless _anim_clean${_num})
 	endforeach ()
 	# register with spotless target
-	add_depend_to_target (spotless _anim_clean)
 endif (UNIX AND DO_ANIMATIONS)
 
 # run examples (test)
