Promote PCRE1 above PCRE2 since GDAL2 already relies on PCRE1.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -54,25 +54,25 @@ if (GDAL_FOUND)
 	list (APPEND GMT_OPTIONAL_LIBRARIES ${GDAL_LIBRARIES})
 endif (GDAL_FOUND)
 
-if (NOT DEFINED GMT_EXCLUDE_PCRE2)
-	find_package (PCRE2)
-endif (NOT DEFINED GMT_EXCLUDE_PCRE2)
-if (NOT PCRE2_FOUND AND NOT DEFINED GMT_EXCLUDE_PCRE)
+if (NOT DEFINED GMT_EXCLUDE_PCRE)
 	find_package (PCRE)
-endif (NOT PCRE2_FOUND AND NOT DEFINED GMT_EXCLUDE_PCRE)
-if (PCRE2_FOUND)
-	set (HAVE_PCRE2 TRUE CACHE INTERNAL "System has PCRE2")
-	set (GMT_CONFIG_REGEX_MESSAGE "PCRE2 (${PCRE2_LIBRARIES})"
-		CACHE INTERNAL "Regex config message")
-	include_directories (${PCRE2_INCLUDE_DIR})
-	list (APPEND GMT_OPTIONAL_LIBRARIES ${PCRE2_LIBRARIES})
-elseif (PCRE_FOUND)
+endif (NOT DEFINED GMT_EXCLUDE_PCRE)
+if (NOT PCRE_FOUND AND NOT DEFINED GMT_EXCLUDE_PCRE2)
+	find_package (PCRE2)
+endif (NOT PCRE_FOUND AND NOT DEFINED GMT_EXCLUDE_PCRE2)
+if (PCRE_FOUND)
 	set (HAVE_PCRE TRUE CACHE INTERNAL "System has PCRE")
 	set (GMT_CONFIG_REGEX_MESSAGE "PCRE (${PCRE_LIBRARIES})"
 		CACHE INTERNAL "Regex config message")
 	include_directories (${PCRE_INCLUDE_DIR})
 	list (APPEND GMT_OPTIONAL_LIBRARIES ${PCRE_LIBRARIES})
-else (PCRE2_FOUND)
+elseif (PCRE2_FOUND)
+	set (HAVE_PCRE2 TRUE CACHE INTERNAL "System has PCRE2")
+	set (GMT_CONFIG_REGEX_MESSAGE "PCRE2 (${PCRE2_LIBRARIES})"
+		CACHE INTERNAL "Regex config message")
+	include_directories (${PCRE2_INCLUDE_DIR})
+	list (APPEND GMT_OPTIONAL_LIBRARIES ${PCRE2_LIBRARIES})
+else (PCRE_FOUND)
 	find_package (REGEX)
 	if (REGEX_FOUND)
 		set (HAVE_POSIX_ERE TRUE CACHE INTERNAL "System has regex.h")
@@ -85,7 +85,7 @@ else (PCRE2_FOUND)
 		set (GMT_CONFIG_REGEX_MESSAGE "unsupported"
 			CACHE INTERNAL "Regex config message")
 	endif (REGEX_FOUND)
-endif (PCRE2_FOUND)
+endif (PCRE_FOUND)
 
 if (NOT DEFINED GMT_EXCLUDE_FFTW3)
 	find_package (FFTW3)
