--- a/doc_classic/rst/conf.py.in
+++ b/doc_classic/rst/conf.py.in
@@ -268,7 +268,6 @@ man_pages = [
 ('grdcut', 'grdcut', 'Extract subregion from a grid', '', 1),
 ('grdedit', 'grdedit', 'Modify header or content of a grid', '', 1),
 ('grdfft', 'grdfft', 'Do mathematical operations on grids in the wavenumber (or frequency) domain', '', 1),
-('grdfill', 'grdfill', 'Interpolate across holes in a grid', '', 1),
 ('grdfilter', 'grdfilter', 'Filter a grid in the space (or time) domain', '', 1),
 ('grdgradient', 'grdgradient', 'Compute directional derivative or gradient from a grid', '', 1),
 ('grdhisteq', 'grdhisteq', 'Perform histogram equalization for a grid', '', 1),
@@ -358,7 +357,7 @@ man_pages = [
 ('supplements/spotter/grdrotater', 'grdrotater', 'Finite rotation reconstruction of geographic grid', '', 1),
 ('supplements/spotter/grdspotter', 'grdspotter', 'Create CVA image from a gravity or topography grid', '', 1),
 ('supplements/spotter/hotspotter', 'hotspotter', 'Create CVA image from seamount locations', '', 1),
-('supplements/spotter/originater', 'originater', 'Associate seamounts with nearest hotspot point sources', '', 1),
+('supplements/spotter/originator', 'originator', 'Associate seamounts with nearest hotspot point sources', '', 1),
 ('supplements/spotter/polespotter', 'polespotter', 'Find stage poles given fracture zones and abyssal hills', '', 1),
 ('supplements/spotter/rotconverter', 'rotconverter', 'Manipulate total reconstruction and stage rotations', '', 1),
 ('supplements/x2sys/x2sys_binlist', 'x2sys_binlist', 'Create bin index listing from track data files', '', 1),
