Use configured HAVE_WEBKIT for ifdef

--- a/src/gmt_config.h.in
+++ b/src/gmt_config.h.in
@@ -69,6 +69,9 @@
 /* compile with pthreads support <pthread.h> */
 #cmakedefine HAVE_PTHREAD
 
+/* compile with WEBKIT support */
+#cmakedefine HAVE_WEBKIT
+
 /* shared library */
 #cmakedefine BUILD_SHARED_LIBS
 
