Revert instruction that made webview build automatic on OSX

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -38,9 +38,9 @@ else (WIN32)
 endif (WIN32)
 
 # On Windows and OSX always build with WebView
-if (WIN32 AND APPLE)
+if (WIN32)
 	set (WEBVIEW TRUE)
-endif (WIN32 AND APPLE)
+endif (WIN32)
 
 # Include CREATE_DEBUG_SYM macro and set DEBUG_BUILD
 include (CreateDebugSym)
