Travis CI Integration with Monolithic Docker Image and Auxiliary Development image
Target Issue: #13

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
-language: c
+language: generic
+
+git:
+  depth: 3
 
 sudo: required
 
+services:
+  - docker
+
 branches:
     only:
+        # CI Development Branches
         - master
         - 5.4
         # Regex to build tagged commits with version numbers
@@ -11,26 +18,18 @@ branches:
 
 os:
     - linux
-    #- osx
 
-env:
-    global:
-        - INSTALLDIR="$HOME/gmt-install-dir"
-        - COASTLINEDIR="$HOME/gmt-install-dir/coast"
-        - PATH="$INSTALLDIR/bin:$PATH"
-        - LD_LIBRARY_PATH="$INSTALLDIR/lib:$LD_LIBRARY_PATH"
-
-before_install:
-    # Install GMT dependencies
-    - bash ci/travis-setup.sh
-
+addons:
+  apt:
+    packages:
+      - docker-ce
+    
 install:
-    # Build and install GMT
-    - bash ci/travis-build.sh;
-
+    - docker build --tag gmt .
+    
 script:
-    - gmt defaults -Vd
-    - gmt pscoast -R0/10/0/10 -JM6i -Ba -Ggray -P -Vd > test.ps
+    - docker run --rm gmt defaults -Vd
+    - docker run --rm gmt pscoast -R0/10/0/10 -JM6i -Ba -Ggray -P -Vd > test.ps
 
 
 notifications:
