--- a/src/gmt_version.h.in
+++ b/src/gmt_version.h.in
@@ -31,7 +31,7 @@
 
 #cmakedefine GMT_SOURCE_CODE_CONTROL_VERSION_STRING "@GMT_SOURCE_CODE_CONTROL_VERSION_STRING@"
 #ifdef GMT_SOURCE_CODE_CONTROL_VERSION_STRING
-#	define GMT_STRING "@GMT_PACKAGE_VERSION_WITH_SVN_REVISION@ (r@GMT_SOURCE_CODE_CONTROL_VERSION_STRING@)"
+#	define GMT_STRING "@GMT_PACKAGE_VERSION_WITH_SVN_REVISION@ (@GMT_SOURCE_CODE_CONTROL_VERSION_STRING@)"
 #else /* if HAVE_SVN_VERSION or if unversioned */
 #	define GMT_STRING "@GMT_PACKAGE_VERSION_WITH_SVN_REVISION@"
 #endif
