Fix glitches when converting some scripts to modern mode
Not all scripts are meant to be exposed to the users via documentation and may not be simple to reproduce in modern mode.  I have fixed some fo the changes, with more to come leter.

--- a/doc_modern/scripts/gmtest.in
+++ b/doc_modern/scripts/gmtest.in
@@ -182,10 +182,10 @@ gmt set -Du PS_CHAR_ENCODING ISOLatin1+
 # Tentative PS file name
 ps="${script_name%.sh}.ps"
 # Modern mode needs a stable PPID but ctest messes that up when pipes are used
-if [ "X$script_mode" = "XM" ]; then
+#if [ "X$script_mode" = "XM" ]; then
 	export GMT_PPID=\$\$
 	echo "Set GMT_PPID = \$GMT_PPID"
-fi
+#fi
 # Now run the script
 . "${local_script}"
 EOF
