--- a/share/tools/gmt5syntax.in
+++ b/share/tools/gmt5syntax.in
@@ -23,7 +23,7 @@ gmtget gmtgravmag3d gmtinfo gmtlogo gmtregress
 gmtmath gmtselect gmtset gmtsimplify gmtspatial gmtstitch gmtvector gmtwhich
 gravfft grd2cpt grd2rgb grd2xyz grdblend grdclip grdcontour grdcut grdedit
 grdfft grdfilter grdflexure grdgradient grdgravmag3d grdhisteq grdimage grdinfo
-grdlandmask grdmask grdmath grdpaste grdpmodeler grdproject grdraster grdredpol
+grdlandmask grdmask grdmath grdpaste grdpmodeler grdproject grdredpol
 grdconvert grdrotater grdsample grdseamount grdspotter grdtrack grdtrend
 grdvector grdview grdvolume greenspline gshhg hotspotter img2grd kml2gmt
 makecpt mapproject mgd77convert mgd77info mgd77list mgd77magref mgd77manage
