--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ branches:
     only:
         - master
         - 5.4
+        - codecov
         # Regex to build tagged commits with version numbers
         - /\d+\.\d+(\.\d+)?(\S*)?$/
 
