--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ env:
             export PYTHON=3.6
             export CONDA_INSTALL_EXTRA="sphinx"
           fi
+        - COVERAGE=true
 
 before_install:
     # Install GMT dependencies
@@ -43,8 +44,15 @@ script:
     - gmt pscoast -R0/10/0/10 -JM6i -Ba -Ggray -P -Vd > test.ps
     # Build GMT documentations
     - if [ "$TRAVIS_EVENT_TYPE" == "cron" ]; then
-        cd build; make -j docs_html;
+        cd build; make -j docs_html; cd ..;
       fi
+    # Build tests and check coverage
+    # - cd build; make -j check; cd ..
+    - cd build; ctest -R pssac; cd ..
+
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
+
 
 notifications:
     email: false
