Set coverage as cron job

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ env:
         - if [ "$TRAVIS_EVENT_TYPE" == "cron" ]; then
             export PYTHON=3.6
             export CONDA_INSTALL_EXTRA="sphinx"
+            export COVERAGE=true
           fi
-        - COVERAGE=true
 
 before_install:
     # Install GMT dependencies
@@ -42,12 +42,13 @@ install:
 script:
     - gmt defaults -Vd
     - gmt pscoast -R0/10/0/10 -JM6i -Ba -Ggray -P -Vd > test.ps
-    # Build GMT documentations
+    # Build documentations, tests and coverage reports
     - if [ "$TRAVIS_EVENT_TYPE" == "cron" ]; then
         cd build; make -j docs_html; cd ..;
+        cd build; make -j check; cd ..;
       fi
-    # Build tests and check coverage
-    - cd build; make -j check; cd ..
+
+after_success:
     - bash <(curl -s https://codecov.io/bash)
 
 notifications:
